--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     //renderer.shadowMap.type = THREE.PCFSoftShadowMap;
     //renderer.shadowMap.type = THREE.PCFShadowMap;
     //renderer.shadowMap.type = THREE.BasicShadowMap;
-    renderer.shadowMap.type = THREE.VSMShadowMap;
-    renderer.outputEncoding = THREE.sRGBEncoding; 
+    //renderer.shadowMap.type = THREE.VSMShadowMap;
+    //renderer.outputEncoding = THREE.sRGBEncoding; 
     document.body.appendChild(renderer.domElement);
 
     // Controls
