--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
         if (node.isMesh) {
           node.castShadow = true;
           node.receiveShadow = true;
+
+          // Optional: brighten shadows slightly
+          if (node.material && node.material.color) {
+            node.material.color.multiplyScalar(1.1);
+          }
         }
       });
       scene.add(gltf.scene);
