--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
           // Optional: brighten shadows slightly
           if (node.material && node.material.color) {
-            node.material.color.multiplyScalar(.4);
+            node.material.color.multiplyScalar(2);
           }
         }
       });
