--- a/index.html
+++ b/index.html
@@ -80,24 +80,24 @@
     directionalLight.position.set(5, 10, 7.5);
     directionalLight.castShadow = true;
 
+    // Shadow settings
+    // directionalLight.shadow.mapSize.width = 64;  // higher resolution
+    // directionalLight.shadow.mapSize.height = 64;
+    // directionalLight.shadow.bias = -0.0005;        // small bias to reduce shadow acne
+    // directionalLight.shadow.normalBias = 0.005;     // helps soften edge
+
+    // directionalLight.shadow.camera.near = 0.5;
+    // directionalLight.shadow.camera.far = 50;
+    // directionalLight.shadow.camera.left = -10;
+    // directionalLight.shadow.camera.right = 10;
+    // directionalLight.shadow.camera.top = 10;
+    // directionalLight.shadow.camera.bottom = -10;
+    scene.add(directionalLight);
+
     // Optional fill light to soften shadows from other side
     const fillLight = new THREE.DirectionalLight(0xffffff, 1.0);
     fillLight.position.set(-5, 10, 7.5);
     scene.add(fillLight);
-
-    // Shadow settings
-    directionalLight.shadow.mapSize.width = 64;  // higher resolution
-    directionalLight.shadow.mapSize.height = 64;
-    directionalLight.shadow.bias = -0.0005;        // small bias to reduce shadow acne
-    directionalLight.shadow.normalBias = 0.005;     // helps soften edge
-
-    directionalLight.shadow.camera.near = 0.5;
-    directionalLight.shadow.camera.far = 50;
-    directionalLight.shadow.camera.left = -10;
-    directionalLight.shadow.camera.right = 10;
-    directionalLight.shadow.camera.top = 10;
-    directionalLight.shadow.camera.bottom = -10;
-    scene.add(directionalLight);
 
     // Ground with softer shadow blending
     const groundGeo = new THREE.PlaneGeometry(50, 50);
