--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     ssaoPass.maxDistance = 0.1;
     composer.addPass(ssaoPass);
 
-    (Optional) Bloom for lighting enhancement
+    // (Optional) Bloom for lighting enhancement
     const bloomPass = new UnrealBloomPass(
       new THREE.Vector2(window.innerWidth, window.innerHeight),
       0.1, 0.4, 0.85
