--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
     // SSAO pass to simulate soft ambient shadows
     const ssaoPass = new SSAOPass(scene, camera, window.innerWidth, window.innerHeight);
-    ssaoPass.kernelRadius = .01;           // Larger radius = softer AO
-    ssaoPass.minDistance = 0.001;
-    ssaoPass.maxDistance = 0.1;
+    ssaoPass.kernelRadius = 1;           // Larger radius = softer AO
+    ssaoPass.minDistance = 0.1;
+    ssaoPass.maxDistance = 1;
     composer.addPass(ssaoPass);
 
     // (Optional) Bloom for lighting enhancement
