--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     import { GLTFLoader } from 'https://esm.sh/three@0.160.1/examples/jsm/loaders/GLTFLoader.js';
     import { DRACOLoader } from 'https://esm.sh/three@0.160.1/examples/jsm/loaders/DRACOLoader.js';
 
-    import { EffectComposer } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/EffectComposer.js';
-    import { RenderPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/RenderPass.js';
-    import { UnrealBloomPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/UnrealBloomPass.js';
-    import { SSAOPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/SSAOPass.js';
+    // import { EffectComposer } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/EffectComposer.js';
+    // import { RenderPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/RenderPass.js';
+    // import { UnrealBloomPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/UnrealBloomPass.js';
+    // import { SSAOPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/SSAOPass.js';
 
     // Scene
     const scene = new THREE.Scene();
@@ -40,23 +40,23 @@
     renderer.outputEncoding = THREE.sRGBEncoding; 
     document.body.appendChild(renderer.domElement);
 
-    // Setup Effect Composer for postprocessing
-    const composer = new EffectComposer(renderer);
-    composer.addPass(new RenderPass(scene, camera));
+    // // Setup Effect Composer for postprocessing
+    // const composer = new EffectComposer(renderer);
+    // composer.addPass(new RenderPass(scene, camera));
 
-    // SSAO pass to simulate soft ambient shadows
-    const ssaoPass = new SSAOPass(scene, camera, window.innerWidth, window.innerHeight);
-    ssaoPass.kernelRadius = 1;           // Larger radius = softer AO
-    ssaoPass.minDistance = 0.001;
-    ssaoPass.maxDistance = 0.1;
-    composer.addPass(ssaoPass);
+    // // SSAO pass to simulate soft ambient shadows
+    // const ssaoPass = new SSAOPass(scene, camera, window.innerWidth, window.innerHeight);
+    // ssaoPass.kernelRadius = 1;           // Larger radius = softer AO
+    // ssaoPass.minDistance = 0.001;
+    // ssaoPass.maxDistance = 0.1;
+    // composer.addPass(ssaoPass);
 
-    // (Optional) Bloom for lighting enhancement
-    const bloomPass = new UnrealBloomPass(
-      new THREE.Vector2(window.innerWidth, window.innerHeight),
-      0.1, 0.4, 0.85
-    );
-    composer.addPass(bloomPass);
+    // // (Optional) Bloom for lighting enhancement
+    // const bloomPass = new UnrealBloomPass(
+    //   new THREE.Vector2(window.innerWidth, window.innerHeight),
+    //   0.1, 0.4, 0.85
+    // );
+    // composer.addPass(bloomPass);
 
 
     // Controls
@@ -140,8 +140,8 @@
         function animate() {
       requestAnimationFrame(animate);
       controls.update();
-      composer.render(); // ⬅️ postprocessed render
-      // renderer.render(scene, camera);
+      // composer.render(); // ⬅️ postprocessed render
+      renderer.render(scene, camera);
       }
 
     animate();
