--- a/index.html
+++ b/index.html
@@ -131,7 +131,13 @@
 
     // Ground with softer shadow blending
     const groundGeo = new THREE.PlaneGeometry(50, 50);
-    const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 }); // softer
+    // const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 }); // softer
+    const groundMat = new THREE.MeshStandardMaterial({
+      color: 0x228B22,   // forest green
+      roughness: 0.8,
+      metalness: 0.0
+    });
+
     const ground = new THREE.Mesh(groundGeo, groundMat);
     ground.rotation.x = -Math.PI / 2;
     ground.position.y = 0;
