--- a/index.html
+++ b/index.html
@@ -130,14 +130,33 @@
     // lightFolder.open();
 
     // Ground with softer shadow blending
-    const groundGeo = new THREE.PlaneGeometry(50, 50);
-    // const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 }); // softer
-    const groundMat = new THREE.MeshStandardMaterial({
-      color: 0x228B22,   // forest green
-      roughness: 0.8,
-      metalness: 0.0
-    });
+    // const groundGeo = new THREE.PlaneGeometry(50, 50);
+    // // const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 }); // softer
+    // const groundMat = new THREE.MeshStandardMaterial({
+    //   color: 0x228B22,   // forest green
+    //   roughness: 0.8,
+    //   metalness: 0.0
+    // });
 
+    // const ground = new THREE.Mesh(groundGeo, groundMat);
+    // ground.rotation.x = -Math.PI / 2;
+    // ground.position.y = 0;
+    // ground.receiveShadow = true;
+    // scene.add(ground);
+
+    const textureLoader = new THREE.TextureLoader();
+
+    const grassTexture = textureLoader.load('https://threejsfundamentals.org/threejs/resources/images/grasslight-big.jpg');
+    grassTexture.wrapS = THREE.RepeatWrapping;
+    grassTexture.wrapT = THREE.RepeatWrapping;
+    grassTexture.repeat.set(10, 10);
+
+    const groundGeo = new THREE.PlaneGeometry(50, 50);
+    const groundMat = new THREE.MeshStandardMaterial({
+      map: grassTexture,
+      roughness: 1,
+      metalness: 0
+    });
     const ground = new THREE.Mesh(groundGeo, groundMat);
     ground.rotation.x = -Math.PI / 2;
     ground.position.y = 0;
