--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     const textureLoader = new THREE.TextureLoader();
 
-    const grassTexture = textureLoader.load('https://threejsfundamentals.org/threejs/resources/images/grasslight-big.jpg');
+    const grassTexture = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/grasslight-big.jpg');
     grassTexture.wrapS = THREE.RepeatWrapping;
     grassTexture.wrapT = THREE.RepeatWrapping;
     grassTexture.repeat.set(10, 10);
