--- a/index.html
+++ b/index.html
@@ -146,22 +146,32 @@
 
     const textureLoader = new THREE.TextureLoader();
 
-    const grassTexture = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/grasslight-big.jpg');
-    grassTexture.wrapS = THREE.RepeatWrapping;
-    grassTexture.wrapT = THREE.RepeatWrapping;
-    grassTexture.repeat.set(10, 10);
+const grassTex = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/grasslight-big.jpg');
+const dirtTex = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/backgrounddetailed6.jpg');
+const bumpTex = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/grasslight-big-nm.jpg'); // normal map for bumps
 
-    const groundGeo = new THREE.PlaneGeometry(50, 50);
-    const groundMat = new THREE.MeshStandardMaterial({
-      map: grassTexture,
-      roughness: 1,
-      metalness: 0
-    });
-    const ground = new THREE.Mesh(groundGeo, groundMat);
-    ground.rotation.x = -Math.PI / 2;
-    ground.position.y = 0;
-    ground.receiveShadow = true;
-    scene.add(ground);
+// Repeat textures
+[grassTex, dirtTex, bumpTex].forEach(tex => {
+  tex.wrapS = tex.wrapT = THREE.RepeatWrapping;
+  tex.repeat.set(10, 10);
+});
+
+const groundMat = new THREE.MeshStandardMaterial({
+  map: grassTex,
+  bumpMap: dirtTex, // subtle noise as bump
+  bumpScale: 0.15,   // tweak for softness
+  normalMap: bumpTex, // optional
+  roughness: 0.9,
+  metalness: 0
+});
+
+const groundGeo = new THREE.PlaneGeometry(50, 50);
+const ground = new THREE.Mesh(groundGeo, groundMat);
+ground.rotation.x = -Math.PI / 2;
+ground.position.y = 0;
+ground.receiveShadow = true;
+scene.add(ground);
+
 
 
     // Draco Loader
