--- a/index.html
+++ b/index.html
@@ -130,48 +130,48 @@
     // lightFolder.add(lightSettings, 'ambient', 0, 2).step(0.05).name('Ambient Intensity').onChange(v => ambient.intensity = v);
     // lightFolder.open();
 
-    // Ground with softer shadow blending
-    // const groundGeo = new THREE.PlaneGeometry(50, 50);
-    // // const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 }); // softer
+    //Ground with softer shadow blending
+    const groundGeo = new THREE.PlaneGeometry(50, 50);
+    const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 }); // softer
     // const groundMat = new THREE.MeshStandardMaterial({
     //   color: 0x228B22,   // forest green
     //   roughness: 0.8,
     //   metalness: 0.0
     // });
 
+    const ground = new THREE.Mesh(groundGeo, groundMat);
+    ground.rotation.x = -Math.PI / 2;
+    ground.position.y = 0;
+    ground.receiveShadow = true;
+    scene.add(ground);
+
+    // const textureLoader = new THREE.TextureLoader();
+
+    // const grassTex = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/grasslight-big.jpg');
+    // const dirtTex = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/grasslight-big.jpg');
+    // const bumpTex = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/grasslight-big.jpg'); // normal map for bumps
+
+    // // Repeat textures
+    // [grassTex, dirtTex, bumpTex].forEach(tex => {
+    //   tex.wrapS = tex.wrapT = THREE.RepeatWrapping;
+    //   tex.repeat.set(10, 10);
+    // });
+
+    // const groundMat = new THREE.MeshStandardMaterial({
+    //   map: grassTex,
+    //   bumpMap: dirtTex, // subtle noise as bump
+    //   bumpScale: 0.15,   // tweak for softness
+    //   normalMap: bumpTex, // optional
+    //   roughness: 0.9,
+    //   metalness: 0
+    // });
+
+    // const groundGeo = new THREE.PlaneGeometry(50, 50);
     // const ground = new THREE.Mesh(groundGeo, groundMat);
     // ground.rotation.x = -Math.PI / 2;
     // ground.position.y = 0;
     // ground.receiveShadow = true;
     // scene.add(ground);
-
-    const textureLoader = new THREE.TextureLoader();
-
-const grassTex = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/grasslight-big.jpg');
-const dirtTex = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/grasslight-big.jpg');
-const bumpTex = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/grasslight-big.jpg'); // normal map for bumps
-
-// Repeat textures
-[grassTex, dirtTex, bumpTex].forEach(tex => {
-  tex.wrapS = tex.wrapT = THREE.RepeatWrapping;
-  tex.repeat.set(10, 10);
-});
-
-const groundMat = new THREE.MeshStandardMaterial({
-  map: grassTex,
-  bumpMap: dirtTex, // subtle noise as bump
-  bumpScale: 0.15,   // tweak for softness
-  normalMap: bumpTex, // optional
-  roughness: 0.9,
-  metalness: 0
-});
-
-const groundGeo = new THREE.PlaneGeometry(50, 50);
-const ground = new THREE.Mesh(groundGeo, groundMat);
-ground.rotation.x = -Math.PI / 2;
-ground.position.y = 0;
-ground.receiveShadow = true;
-scene.add(ground);
 
 
 
