--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     import { GLTFLoader } from 'https://esm.sh/three@0.160.1/examples/jsm/loaders/GLTFLoader.js';
     import { DRACOLoader } from 'https://esm.sh/three@0.160.1/examples/jsm/loaders/DRACOLoader.js';
 
-    // import * as dat from 'https://cdn.jsdelivr.net/npm/dat.gui@0.7.9/build/dat.gui.module.js';
+    import * as dat from 'https://cdn.jsdelivr.net/npm/dat.gui@0.7.9/build/dat.gui.module.js';
     import * as dat from 'https://esm.sh/dat.gui@0.7.9';
 
     import { EffectComposer } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/EffectComposer.js';
@@ -103,78 +103,48 @@
     fillLight.position.set(-5, 10, 7.5);
     scene.add(fillLight);
 
-    // // Live control panel
-    // const gui = new dat.GUI();
+    // Live control panel
+    const gui = new dat.GUI();
 
-    // // SSAO Settings
-    // const ssaoSettings = {
-    //   kernelRadius: ssaoPass.kernelRadius,
-    //   minDistance: ssaoPass.minDistance,
-    //   maxDistance: ssaoPass.maxDistance,
-    // };
+    // SSAO Settings
+    const ssaoSettings = {
+      kernelRadius: ssaoPass.kernelRadius,
+      minDistance: ssaoPass.minDistance,
+      maxDistance: ssaoPass.maxDistance,
+    };
 
-    // const ssaoFolder = gui.addFolder('SSAO');
-    // ssaoFolder.add(ssaoSettings, 'kernelRadius', 0, 64).step(1).name('Blur Radius').onChange(v => ssaoPass.kernelRadius = v);
-    // ssaoFolder.add(ssaoSettings, 'minDistance', 0.0001, 0.05).step(0.0001).name('Min Distance').onChange(v => ssaoPass.minDistance = v);
-    // ssaoFolder.add(ssaoSettings, 'maxDistance', 0.01, 1).step(0.01).name('Max Distance').onChange(v => ssaoPass.maxDistance = v);
-    // ssaoFolder.open();
+    const ssaoFolder = gui.addFolder('SSAO');
+    ssaoFolder.add(ssaoSettings, 'kernelRadius', 0, 64).step(1).name('Blur Radius').onChange(v => ssaoPass.kernelRadius = v);
+    ssaoFolder.add(ssaoSettings, 'minDistance', 0.0001, 0.05).step(0.0001).name('Min Distance').onChange(v => ssaoPass.minDistance = v);
+    ssaoFolder.add(ssaoSettings, 'maxDistance', 0.01, 1).step(0.01).name('Max Distance').onChange(v => ssaoPass.maxDistance = v);
+    ssaoFolder.open();
 
-    // // Light Settings
-    // const lightFolder = gui.addFolder('Lights');
+    // Light Settings
+    const lightFolder = gui.addFolder('Lights');
 
-    // const lightSettings = {
-    //   directional: directionalLight.intensity,
-    //   ambient: ambient.intensity
-    // };
+    const lightSettings = {
+      directional: directionalLight.intensity,
+      ambient: ambient.intensity
+    };
 
-    // lightFolder.add(lightSettings, 'directional', 0, 10).step(0.1).name('Directional Intensity').onChange(v => directionalLight.intensity = v);
-    // lightFolder.add(lightSettings, 'ambient', 0, 2).step(0.05).name('Ambient Intensity').onChange(v => ambient.intensity = v);
-    // lightFolder.open();
+    lightFolder.add(lightSettings, 'directional', 0, 10).step(0.1).name('Directional Intensity').onChange(v => directionalLight.intensity = v);
+    lightFolder.add(lightSettings, 'ambient', 0, 2).step(0.05).name('Ambient Intensity').onChange(v => ambient.intensity = v);
+    lightFolder.open();
 
-    //Ground with softer shadow blending
+    Ground with softer shadow blending
     const groundGeo = new THREE.PlaneGeometry(50, 50);
     const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 }); // softer
-    // const groundMat = new THREE.MeshStandardMaterial({
-    //   color: 0x228B22,   // forest green
-    //   roughness: 0.8,
-    //   metalness: 0.0
-    // });
+    const groundMat = new THREE.MeshStandardMaterial({
+      color: 0x228B22,   // forest green
+      roughness: 0.8,
+      metalness: 0.0
+    });
 
     const ground = new THREE.Mesh(groundGeo, groundMat);
     ground.rotation.x = -Math.PI / 2;
     ground.position.y = 0;
     ground.receiveShadow = true;
     scene.add(ground);
-
-    // const textureLoader = new THREE.TextureLoader();
-
-    // const grassTex = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/grasslight-big.jpg');
-    // const dirtTex = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/grasslight-big.jpg');
-    // const bumpTex = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/textures/terrain/grasslight-big.jpg'); // normal map for bumps
-
-    // // Repeat textures
-    // [grassTex, dirtTex, bumpTex].forEach(tex => {
-    //   tex.wrapS = tex.wrapT = THREE.RepeatWrapping;
-    //   tex.repeat.set(10, 10);
-    // });
-
-    // const groundMat = new THREE.MeshStandardMaterial({
-    //   map: grassTex,
-    //   bumpMap: dirtTex, // subtle noise as bump
-    //   bumpScale: 0.15,   // tweak for softness
-    //   normalMap: bumpTex, // optional
-    //   roughness: 0.9,
-    //   metalness: 0
-    // });
-
-    // const groundGeo = new THREE.PlaneGeometry(50, 50);
-    // const ground = new THREE.Mesh(groundGeo, groundMat);
-    // ground.rotation.x = -Math.PI / 2;
-    // ground.position.y = 0;
-    // ground.receiveShadow = true;
-    // scene.add(ground);
-
-
 
     // Draco Loader
     const dracoLoader = new DRACOLoader();
