--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     lightFolder.add(lightSettings, 'ambient', 0, 2).step(0.05).name('Ambient Intensity').onChange(v => ambient.intensity = v);
     lightFolder.open();
 
-    Ground with softer shadow blending
+    //Ground with softer shadow blending
     const groundGeo = new THREE.PlaneGeometry(50, 50);
     const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 }); // softer
     const groundMat = new THREE.MeshStandardMaterial({
