--- a/index.html
+++ b/index.html
@@ -9,184 +9,158 @@
   </style>
 </head>
 <body>
-  <script type="module">
+<script type="module">
+  import * as THREE from 'https://esm.sh/three@0.160.1';
+  import { OrbitControls } from 'https://esm.sh/three@0.160.1/examples/jsm/controls/OrbitControls.js';
+  import { GLTFLoader } from 'https://esm.sh/three@0.160.1/examples/jsm/loaders/GLTFLoader.js';
+  import { DRACOLoader } from 'https://esm.sh/three@0.160.1/examples/jsm/loaders/DRACOLoader.js';
+  import * as dat from 'https://cdn.jsdelivr.net/npm/dat.gui@0.7.9/build/dat.gui.module.js';
+  import { EffectComposer } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/EffectComposer.js';
+  import { RenderPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/RenderPass.js';
+  import { UnrealBloomPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/UnrealBloomPass.js';
+  import { SSAOPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/SSAOPass.js';
 
-    import * as THREE from 'https://esm.sh/three@0.160.1';
-    import { OrbitControls } from 'https://esm.sh/three@0.160.1/examples/jsm/controls/OrbitControls.js';
-    import { GLTFLoader } from 'https://esm.sh/three@0.160.1/examples/jsm/loaders/GLTFLoader.js';
-    import { DRACOLoader } from 'https://esm.sh/three@0.160.1/examples/jsm/loaders/DRACOLoader.js';
+  const scene = new THREE.Scene();
+  scene.background = new THREE.Color(0xdddddd);
+  
+  const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+  camera.position.set(6, 4, 10);
 
-    import * as dat from 'https://cdn.jsdelivr.net/npm/dat.gui@0.7.9/build/dat.gui.module.js';
-    // import * as dat from 'https://esm.sh/dat.gui@0.7.9';
+  const renderer = new THREE.WebGLRenderer({ antialias: true });
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.shadowMap.enabled = true;
+  renderer.shadowMap.type = THREE.VSMShadowMap;
+  renderer.outputEncoding = THREE.sRGBEncoding;
+  document.body.appendChild(renderer.domElement);
 
-    import { EffectComposer } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/EffectComposer.js';
-    import { RenderPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/RenderPass.js';
-    import { UnrealBloomPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/UnrealBloomPass.js';
-    import { SSAOPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/SSAOPass.js';
+  const composer = new EffectComposer(renderer);
+  composer.addPass(new RenderPass(scene, camera));
 
-    // Scene
-    const scene = new THREE.Scene();
-    scene.background = new THREE.Color(0xdddddd);
+  const ssaoPass = new SSAOPass(scene, camera, window.innerWidth, window.innerHeight);
+  ssaoPass.kernelRadius = 0;
+  ssaoPass.minDistance = 0.001;
+  ssaoPass.maxDistance = 0.1;
+  composer.addPass(ssaoPass);
 
-    // Camera
-    const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.set(6, 4, 10);
+  const bloomPass = new UnrealBloomPass(
+    new THREE.Vector2(window.innerWidth, window.innerHeight),
+    0.1, 0.4, 0.85
+  );
+  composer.addPass(bloomPass);
 
-    // Renderer
-    const renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.shadowMap.enabled = true;
-    //renderer.shadowMap.type = THREE.PCFSoftShadowMap;
-    //renderer.shadowMap.type = THREE.PCFShadowMap;
-    //renderer.shadowMap.type = THREE.BasicShadowMap;
-    renderer.shadowMap.type = THREE.VSMShadowMap;
-    renderer.outputEncoding = THREE.sRGBEncoding; 
-    
-    document.body.appendChild(renderer.domElement);
+  const controls = new OrbitControls(camera, renderer.domElement);
+  controls.target.set(0, 4, -5);
+  controls.enableDamping = true;
+  controls.minDistance = 5;
+  controls.maxDistance = 30;
+  controls.minAzimuthAngle = -Math.PI / 12;
+  controls.maxAzimuthAngle = Math.PI / 2;
+  controls.minPolarAngle = Math.PI / 2.5;
+  controls.maxPolarAngle = Math.PI / 1.75;
+  controls.update();
 
-    // Setup Effect Composer for postprocessing
-    const composer = new EffectComposer(renderer);
-    composer.addPass(new RenderPass(scene, camera));
+  const ambient = new THREE.HemisphereLight(0xffffff, 0x444444, 0.8);
+  ambient.position.set(0, 20, 0);
+  scene.add(ambient);
 
-    // SSAO pass to simulate soft ambient shadows
-    const ssaoPass = new SSAOPass(scene, camera, window.innerWidth, window.innerHeight);
-    ssaoPass.kernelRadius = 0;           // Increase for blurrier shadows
-    ssaoPass.minDistance = 0.001;         // Minimum occlusion distance
-    ssaoPass.maxDistance = 0.1;           // Max distance at which occlusion is calculated
-    composer.addPass(ssaoPass);
+  const directionalLight = new THREE.DirectionalLight(0xffffff, 2.5);
+  directionalLight.position.set(5, 10, 7.5);
+  directionalLight.castShadow = true;
+  directionalLight.shadow.mapSize.set(1028, 1028);
+  directionalLight.shadow.bias = -0.0005;
+  directionalLight.shadow.normalBias = 0.005;
+  directionalLight.shadow.camera.near = 0.5;
+  directionalLight.shadow.camera.far = 50;
+  directionalLight.shadow.camera.left = -10;
+  directionalLight.shadow.camera.right = 10;
+  directionalLight.shadow.camera.top = 10;
+  directionalLight.shadow.camera.bottom = -10;
+  scene.add(directionalLight);
 
-    // (Optional) Bloom for lighting enhancement
-    const bloomPass = new UnrealBloomPass(
-      new THREE.Vector2(window.innerWidth, window.innerHeight),
-      0.1, 0.4, 0.85
-    );
-    composer.addPass(bloomPass);
+  const fillLight = new THREE.DirectionalLight(0xffffff, 1.0);
+  fillLight.position.set(-5, 10, 7.5);
+  scene.add(fillLight);
 
+  const gui = new dat.GUI();
 
-    // Controls
-    const controls = new OrbitControls(camera, renderer.domElement);
-    controls.target.set(0, 4, -5);
-    controls.enableDamping = true;
-    controls.minDistance = 5;
-    controls.maxDistance = 30;
-    controls.minAzimuthAngle = -Math.PI / 12;
-    controls.maxAzimuthAngle = Math.PI / 2;
-    controls.minPolarAngle = Math.PI / 2.5;
-    controls.maxPolarAngle = Math.PI / 1.75;
-    controls.update();
+  // SSAO Folder
+  const ssaoSettings = {
+    kernelRadius: ssaoPass.kernelRadius,
+    minDistance: ssaoPass.minDistance,
+    maxDistance: ssaoPass.maxDistance,
+  };
+  const ssaoFolder = gui.addFolder('SSAO');
+  ssaoFolder.add(ssaoSettings, 'kernelRadius', 0, 64).step(1).name('Blur Radius').onChange(v => ssaoPass.kernelRadius = v);
+  ssaoFolder.add(ssaoSettings, 'minDistance', 0.0001, 0.05).step(0.0001).name('Min Distance').onChange(v => ssaoPass.minDistance = v);
+  ssaoFolder.add(ssaoSettings, 'maxDistance', 0.01, 1).step(0.01).name('Max Distance').onChange(v => ssaoPass.maxDistance = v);
+  ssaoFolder.open();
 
-    // Lights
-    const ambient = new THREE.HemisphereLight(0xffffff, 0x444444, 0.8);
-    ambient.position.set(0, 20, 0);
-    scene.add(ambient);
+  // Light Folder
+  const lightSettings = {
+    directional: directionalLight.intensity,
+    ambient: ambient.intensity
+  };
+  const lightFolder = gui.addFolder('Lights');
+  lightFolder.add(lightSettings, 'directional', 0, 10).step(0.1).name('Directional Intensity').onChange(v => directionalLight.intensity = v);
+  lightFolder.add(lightSettings, 'ambient', 0, 2).step(0.05).name('Ambient Intensity').onChange(v => ambient.intensity = v);
+  lightFolder.open();
 
-    const directionalLight = new THREE.DirectionalLight(0xffffff, 2.5); // reduced intensity
-    directionalLight.position.set(5, 10, 7.5);
-    directionalLight.castShadow = true;
+  // Ground
+  const groundGeo = new THREE.PlaneGeometry(50, 50);
+  const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 });
+  const ground = new THREE.Mesh(groundGeo, groundMat);
+  ground.rotation.x = -Math.PI / 2;
+  ground.receiveShadow = true;
+  scene.add(ground);
 
-    // Shadow settings
-    directionalLight.shadow.mapSize.width = 1028;  // higher resolution
-    directionalLight.shadow.mapSize.height = 1028;
-    directionalLight.shadow.bias = -0.0005;        // small bias to reduce shadow acne
-    directionalLight.shadow.normalBias = 0.005;     // helps soften edge
+  // Load GLB with DRACO
+  const dracoLoader = new DRACOLoader();
+  dracoLoader.setDecoderPath('https://www.gstatic.com/draco/v1/decoders/');
+  dracoLoader.setDecoderConfig({ type: 'js' });
 
-    directionalLight.shadow.camera.near = 0.5;
-    directionalLight.shadow.camera.far = 50;
-    directionalLight.shadow.camera.left = -10;
-    directionalLight.shadow.camera.right = 10;
-    directionalLight.shadow.camera.top = 10;
-    directionalLight.shadow.camera.bottom = -10;
-    scene.add(directionalLight);
+  const loader = new GLTFLoader();
+  loader.setDRACOLoader(dracoLoader);
 
-    // Optional fill light to soften shadows from other side
-    const fillLight = new THREE.DirectionalLight(0xffffff, 1.0);
-    fillLight.position.set(-5, 10, 7.5);
-    scene.add(fillLight);
+  loader.load('Shyam.glb', (gltf) => {
+    const materialTracker = {};
 
-    // Live control panel
-    const gui = new dat.GUI();
+    gltf.scene.traverse((node) => {
+      if (node.isMesh && node.material) {
+        node.castShadow = true;
+        node.receiveShadow = true;
 
-    // SSAO Settings
-    const ssaoSettings = {
-      kernelRadius: ssaoPass.kernelRadius,
-      minDistance: ssaoPass.minDistance,
-      maxDistance: ssaoPass.maxDistance,
-    };
+        const mat = node.material;
+        const matName = mat.name;
 
-    const ssaoFolder = gui.addFolder('SSAO');
-    ssaoFolder.add(ssaoSettings, 'kernelRadius', 0, 64).step(1).name('Blur Radius').onChange(v => ssaoPass.kernelRadius = v);
-    ssaoFolder.add(ssaoSettings, 'minDistance', 0.0001, 0.05).step(0.0001).name('Min Distance').onChange(v => ssaoPass.minDistance = v);
-    ssaoFolder.add(ssaoSettings, 'maxDistance', 0.01, 1).step(0.01).name('Max Distance').onChange(v => ssaoPass.maxDistance = v);
-    ssaoFolder.open();
-
-    // Light Settings
-    const lightFolder = gui.addFolder('Lights');
-
-    const lightSettings = {
-      directional: directionalLight.intensity,
-      ambient: ambient.intensity
-    };
-
-    lightFolder.add(lightSettings, 'directional', 0, 10).step(0.1).name('Directional Intensity').onChange(v => directionalLight.intensity = v);
-    lightFolder.add(lightSettings, 'ambient', 0, 2).step(0.05).name('Ambient Intensity').onChange(v => ambient.intensity = v);
-    lightFolder.open();
-
-    //Ground with softer shadow blending
-    const groundGeo = new THREE.PlaneGeometry(50, 50);
-    const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 }); // softer
-
-    // Draco Loader
-    const dracoLoader = new DRACOLoader();
-    dracoLoader.setDecoderPath('https://www.gstatic.com/draco/v1/decoders/');
-    dracoLoader.setDecoderConfig({ type: 'js' });
-
-    // GLTF Loader with Draco
-    const loader = new GLTFLoader();
-    loader.setDRACOLoader(dracoLoader);
-
-
-    // Load model
-    loader.load('Shyam.glb', (gltf) => {
-      gltf.scene.traverse((node) => {
-        if (node.isMesh && node.material) {
-          node.castShadow = true;
-          node.receiveShadow = true;
-
-          // Check material name and create GUI control
-          if (node.material.name === "Color1" || node.material.name === "Color2") {
-            const mat = node.material;
-            const colorObj = { color: `#${mat.color.getHexString()}` };
-
-            gui.addColor(colorObj, 'color').name(mat.name).onChange((value) => {
-              mat.color.set(value);
-            });
-          }
+        if ((matName === "Color1" || matName === "Color2") && !materialTracker[matName]) {
+          const colorObj = { color: `#${mat.color.getHexString()}` };
+          gui.addColor(colorObj, 'color').name(matName).onChange((value) => {
+            mat.color.set(value);
+          });
+          materialTracker[matName] = true;
         }
-      });
-
-  scene.add(gltf.scene);
-}, undefined, (error) => {
-  console.error('Error loading model:', error);
-});
-
-
-    // Animate
-        function animate() {
-      requestAnimationFrame(animate);
-      controls.update();
-      composer.render(); // ⬅️ postprocessed render
-      // renderer.render(scene, camera);
       }
-
-    animate();
-
-    // Resize
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
     });
 
-  </script>
+    scene.add(gltf.scene);
+  }, undefined, (error) => {
+    console.error('Error loading model:', error);
+  });
+
+  function animate() {
+    requestAnimationFrame(animate);
+    controls.update();
+    composer.render();
+  }
+
+  animate();
+
+  window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    composer.setSize(window.innerWidth, window.innerHeight);
+  });
+</script>
 </body>
 </html>
