--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   const scene = new THREE.Scene();
   scene.background = new THREE.Color(0xdddddd);
-  
+
   const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
   camera.position.set(6, 4, 10);
 
@@ -81,31 +81,9 @@
   fillLight.position.set(-5, 10, 7.5);
   scene.add(fillLight);
 
+  // Only Color Controls in GUI
   const gui = new dat.GUI();
 
-  // SSAO Folder
-  const ssaoSettings = {
-    kernelRadius: ssaoPass.kernelRadius,
-    minDistance: ssaoPass.minDistance,
-    maxDistance: ssaoPass.maxDistance,
-  };
-  const ssaoFolder = gui.addFolder('SSAO');
-  ssaoFolder.add(ssaoSettings, 'kernelRadius', 0, 64).step(1).name('Blur Radius').onChange(v => ssaoPass.kernelRadius = v);
-  ssaoFolder.add(ssaoSettings, 'minDistance', 0.0001, 0.05).step(0.0001).name('Min Distance').onChange(v => ssaoPass.minDistance = v);
-  ssaoFolder.add(ssaoSettings, 'maxDistance', 0.01, 1).step(0.01).name('Max Distance').onChange(v => ssaoPass.maxDistance = v);
-  ssaoFolder.open();
-
-  // Light Folder
-  const lightSettings = {
-    directional: directionalLight.intensity,
-    ambient: ambient.intensity
-  };
-  const lightFolder = gui.addFolder('Lights');
-  lightFolder.add(lightSettings, 'directional', 0, 10).step(0.1).name('Directional Intensity').onChange(v => directionalLight.intensity = v);
-  lightFolder.add(lightSettings, 'ambient', 0, 2).step(0.05).name('Ambient Intensity').onChange(v => ambient.intensity = v);
-  lightFolder.open();
-
-  // Ground
   const groundGeo = new THREE.PlaneGeometry(50, 50);
   const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 });
   const ground = new THREE.Mesh(groundGeo, groundMat);
@@ -113,7 +91,6 @@
   ground.receiveShadow = true;
   scene.add(ground);
 
-  // Load GLB with DRACO
   const dracoLoader = new DRACOLoader();
   dracoLoader.setDecoderPath('https://www.gstatic.com/draco/v1/decoders/');
   dracoLoader.setDecoderConfig({ type: 'js' });
