--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   fillLight.position.set(-5, 10, 7.5);
   scene.add(fillLight);
 
-  const gui = new dat.GUI();
+  const gui = new dat.GUI.GUI();
 
   const groundGeo = new THREE.PlaneGeometry(50, 50);
   const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 });
