--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     function animate() {
       requestAnimationFrame(animate);
       controls.update();
-      composer.render();
+      renderer.render(scene, camera);
     }
     animate();
 
